# ChangeLog for sys-libs/libchipcard
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/libchipcard/ChangeLog,v 1.83 2009/08/02 15:23:25 maekke Exp $

  02 Aug 2009; Markus Meier <maekke@gentoo.org> libchipcard-4.2.8.ebuild:
  amd64 stable, bug #275705

  29 Jul 2009; Jeroen Roovers <jer@gentoo.org> libchipcard-4.2.8.ebuild:
  Stable for HPPA (bug #275705).

  08 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  libchipcard-4.2.8.ebuild:
  stable x86, bug 275705

*libchipcard-4.2.8 (23 May 2009)

  23 May 2009; Hanno Boeck <hanno@gentoo.org> +libchipcard-4.2.8.ebuild:
  Version bump and cleanup of non-existent configure-options.

  16 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  libchipcard-3.0.4.ebuild, libchipcard-4.2.4.ebuild,
  libchipcard-4.2.5.ebuild, libchipcard-4.2.7.ebuild:
  Migration to virtual/libusb. Verified by code inspection.

*libchipcard-4.2.7 (26 Apr 2009)

  26 Apr 2009; Hanno Boeck <hanno@gentoo.org> +libchipcard-4.2.7.ebuild:
  Version bump.

*libchipcard-4.2.5 (05 Apr 2009)

  05 Apr 2009; Hanno Boeck <hanno@gentoo.org> +libchipcard-4.2.5.ebuild:
  Version bump.

  24 Mar 2009; Hanno Boeck <hanno@gentoo.org> libchipcard-4.2.4.ebuild:
  Raise gwenhywfar dep, fixes #263569.

*libchipcard-4.2.4 (02 Mar 2009)

  02 Mar 2009; Hanno Boeck <hanno@gentoo.org> +libchipcard-4.2.4.ebuild:
  Version bump and switch to hal.

*libchipcard-4.2.3 (13 Nov 2008)

  13 Nov 2008; Hanno Boeck <hanno@gentoo.org> +libchipcard-4.2.3.ebuild:
  Version bump.

  12 Nov 2008; Guy Martin <gmsoft@gentoo.org> libchipcard-3.0.4.ebuild:
  hppa stable.

*libchipcard-4.2.0 (01 Sep 2008)

  01 Sep 2008; Hanno Boeck <hanno@gentoo.org> +libchipcard-4.2.0.ebuild:
  Version bump.

  22 Aug 2008; Markus Meier <maekke@gentoo.org> libchipcard-3.0.4.ebuild:
  amd64 stable, bug #233536

  22 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
  libchipcard-3.0.4.ebuild:
  Stable on sparc, bug #233536
