@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/libchipcard
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libchipcard/ChangeLog,v 1.83 2009/08/02 15:23:25 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libchipcard/ChangeLog,v 1.84 2009/08/03 12:31:14 hanno Exp $
+
+  02 Aug 2009; Hanno Boeck <hanno@gentoo.org> -libchipcard-4.2.4.ebuild,
+  -libchipcard-4.2.5.ebuild, -libchipcard-4.2.7.ebuild,
+  libchipcard-4.2.8.ebuild:
+  Add missing IUSE, remove old versions.
 
   02 Aug 2009; Markus Meier <maekke@gentoo.org> libchipcard-4.2.8.ebuild:
   amd64 stable, bug #275705
